deploy: 801d81e7c3e443470e110bf4e34460acba113476

--- a/envy/error/enum.Error.html
+++ b/envy/error/enum.Error.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta http-equiv="refresh" content="0;URL=../../envy/enum.Error.html">
+    <title>Redirection</title>
 </head>
 <body>
     <p>Redirecting to <a href="../../envy/enum.Error.html">../../envy/enum.Error.html</a>...</p>
